--- a/gb/21/12/7/n13421511.md
+++ b/gb/21/12/7/n13421511.md
@@ -1,65 +1,46 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中风妇一夕失语 高压氧重启说话功能</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13421513-530924-600x400.jpg" />
-<h6>台中童综合医院神经外科柯宗伯医师笔指的白色处，即为患者脑出血位置。（台中童综合医院提供）
-</h6>
+<h6>台中童综合医院神经外科柯宗伯医师笔指的白色处，即为患者脑出血位置。（台中童综合医院提供）</h6>
 <hr>
-<p>【大纪元2021年12月07日讯】（大纪元记者邓玫玲台湾台中报导）现年60岁罗姓女患者，在家突然出现无法说话跟右侧身体无力状况，家人赶紧送到邻近医院处理，确诊为急性脑出血性<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%84%91%E4%B8%AD%E9%A3%8E.md#1">脑中风</a>，虽然有用药物治疗，但经过住院一周后症状并没有明显改善，经亲友建议转院到台中童综合医院神经外科进行治疗。</p>
-<p>经由神经外科柯宗伯医师诊视，确认患者左侧脑部基底核出血，因为血块压迫损伤脑神经，造成患者<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AF%AD%E8%A8%80.md#1">语言</a>与肢体功能出现障碍，不仅完全无法言语，而且右半边身体都无法动弹。入院用药治疗后生理情况稳定，在加护病房住三天即转普通病房，并开始进行<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E5%8E%8B%E6%B0%A7.md#1">高压氧</a>治疗；进行不到10次（每次90分钟疗程）的高压氧治疗后，患者已经可以讲出单字，共进行20次高压氧治疗后，则恢复到可以讲出词组。</p>
-<figure id="13421514" aria-describedby="caption-13421514" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/12/id13421514-530925-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/12/id13421514-530925-450x337.jpg" alt=" 台中童综合医院高压氧治疗中心黄沛生主任，调控高压氧治疗设备，为患者治疗。" width="500" /></a><figcaption id="caption-13421514" class="wp-caption-text">台中童综合医院<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%AB%98%E5%8E%8B%E6%B0%A7.md#1">高压氧</a>治疗中心黄沛生主任，调控高压氧治疗设备，为患者治疗。（台中童综合医院提供）</figcaption></figure>
-<p>柯宗伯医师表示，人体的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AF%AD%E8%A8%80.md#1">语言</a>中枢神经与右侧身体运动中枢神经在大脑左侧，因此当出血性<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%84%91%E4%B8%AD%E9%A3%8E.md#1">脑中风</a>发生时，脑血管破裂造成血块压迫脑神经与影响血管供血，造成了语言功能与右侧肢体功能的丧失。个案在脑中风初期即开始运用高压氧治疗来改善脑组织的含氧量，有效修复受损的脑神经细胞，让无法运作的身体功能逐渐恢复，但后续仍要积极接受语言与肢体复健训练，才能让身体恢复到最佳状态。</p>
+<p>【大纪元2021年12月07日讯】（大纪元记者邓玫玲台湾台中报导）现年60岁罗姓女患者，在家突然出现无法说话跟右侧身体无力状况，家人赶紧送到邻近医院处理，确诊为急性脑出血性脑中风，虽然有用药物治疗，但经过住院一周后症状并没有明显改善，经亲友建议转院到台中童综合医院神经外科进行治疗。</p>
+<p>经由神经外科柯宗伯医师诊视，确认患者左侧脑部基底核出血，因为血块压迫损伤脑神经，造成患者语言与肢体功能出现障碍，不仅完全无法言语，而且右半边身体都无法动弹。入院用药治疗后生理情况稳定，在加护病房住三天即转普通病房，并开始进行高压氧治疗；进行不到10次（每次90分钟疗程）的高压氧治疗后，患者已经可以讲出单字，共进行20次高压氧治疗后，则恢复到可以讲出词组。</p>
+<figure id="13421514" aria-describedby="caption-13421514" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/12/id13421514-530925-450x337.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2021/12/id13421514-530925-450x337.jpg" alt=" 台中童综合医院高压氧治疗中心黄沛生主任，调控高压氧治疗设备，为患者治疗。" width="500" /></a><figcaption id="caption-13421514" class="wp-caption-text">台中童综合医院高压氧治疗中心黄沛生主任，调控高压氧治疗设备，为患者治疗。（台中童综合医院提供）</figcaption></figure>
+<p>柯宗伯医师表示，人体的语言中枢神经与右侧身体运动中枢神经在大脑左侧，因此当出血性脑中风发生时，脑血管破裂造成血块压迫脑神经与影响血管供血，造成了语言功能与右侧肢体功能的丧失。个案在脑中风初期即开始运用高压氧治疗来改善脑组织的含氧量，有效修复受损的脑神经细胞，让无法运作的身体功能逐渐恢复，但后续仍要积极接受语言与肢体复健训练，才能让身体恢复到最佳状态。</p>
 <p>高压氧治疗中心黄沛生主任则说，脑中风患者藉由高压氧的治疗，可提高氧分压，以利氧气扩散至受损组织，不但能改善缺氧状况；并可使脑血管收缩，改善脑部水肿及降低颅内压；也有促进侧肢循环建立及病变血管修复的功能。不论是在急性期甚至发病半年后，愈来愈多实证或是临床经验显示高压氧治疗搭配传统治疗方式，对于脑中风病人的治疗有相辅相成的效果。</p>
 <p>脑中风造成的死亡、失能，跟心肌梗塞一样让人措手不及，尤其是失能之后的复健，对家属跟病患都是漫长的抗战跟折磨，因此已有许多中风患者尝试高压氧治疗，虽然现在还没有大型研究证实疗效，不过已经在临床上有小幅度的使用。</p>
 <p>台中童综合医院表示，由于高压氧治疗也可能会因不同的脑神经细胞损坏情况，造成治疗成效有所差异，因此治疗方式与治疗时间点都应由专业医师评估判断，以达到最好的成效。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/6/n12086902.md#1">手腕下垂疑中风 员荣医院以中西合诊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/9/n12677857.md#1">寒冷天气做到这3点 预防脑中风</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/15/n12689979.md#1">头颈癌男患者脑中风 颅内动脉取栓救回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/19/n13314151.md#1">医疗机构诈保？ 山东2000人“被脑中风”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/19/n13315351.md#1">脑中风列十大死因第四 医吁红色警报三异常就需小心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/5/n13355146.md#1">携手桃荣 员荣医疗体系首创产官学训合作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/19/n13385686.md#1">提供急重症医疗  桃园圣保禄大楼上梁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908392.md#1">三井LaLaport台中试营运 各界期待旧城再起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908430.md#1">疏解国1壅塞 国4丰原潭子段通车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907442.md#1">赖清德任党主席 蔡其昌盼领台湾往对的方向</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/20/n10923009.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906403.md#1">因手术并发症濒死 男童一窥下辈子转生安排</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906615.md#1">【未解之谜】西方极乐世界游记（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908326.md#1">【环球直击】逼企业虚报产值 山东昌乐官员遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908322.md#1">【中国禁闻】中共警察密集死亡 大陆民众展开自救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906514.md#1">【探索时分】如何成为美国伞兵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13907078.md#1">专访闫丽梦：中国大流行的是否是新变异毒株？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906695.md#1">沈舟：中共军委1号军令为何迟迟未发布</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906549.md#1">体制内人士曝安徽疫情惨况：到处办丧事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906509.md#1">75岁著名歌唱家谢莉斯去世 讣告未披露病因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906492.md#1">首度回应搬回香港原因 蔡少芬否认在沪豪宅放租</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907796.md#1">谢莉斯去世细节曝光：因染疫入住呼吸科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906991.md#1">2022美CD销量TOP10 TWICE唯一上榜韩女团</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906657.md#1">周杰伦带昆凌爷爷探班 为阿Ken送上应援车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900876.md#1">战胜感冒的5个最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906422.md#1">每天吃的沙拉油安全吗？一动作增癌症、失智风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904654.md#1">18个存钱小技巧 还能让你成为百万富翁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900788.md#1">一天睡满8小时？最佳睡眠时间其实因人而异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895473.md#1">目标设定在自己能力的80% 达成效率加倍</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/7/n13421511.htm">中风妇一夕失语 高压氧重启说话功能</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/12/7/n13421511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/7/n13421511.htm">中风妇一夕失语 高压氧重启说话功能</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/12/7/n13421511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
